--- a/frontend/src/routes/Home/Home.scss
+++ b/frontend/src/routes/Home/Home.scss
@@ -10,18 +10,24 @@
   margin: 0 auto;
   padding: 0 1.5rem;
 }
+//Navbar Section
+.navbar-section{
+  margin: 10px;
+  padding:0;
+}
+
 
 // Hero Section
 .hero-section {
-  margin: 0;
+  margin: 10px;
   padding: 0;
 }
 
 // Stats Section
 .stats-section {
-  background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+  
   padding: 4rem 0;
-  margin-top: -20px;
+  margin-top: 20px;
   border-radius: 20px 20px 0 0;
   position: relative;
   z-index: 10;
@@ -34,13 +40,13 @@
 }
 
 .stat-card {
-  background: white;
+  
   padding: 2rem;
   border-radius: 16px;
   display: flex;
   align-items: center;
   gap: 1.5rem;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);*/
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   
   &:hover {
