--- a/frontend/src/components/chatBot/Chatbot.scss
+++ b/frontend/src/components/chatBot/Chatbot.scss
@@ -5,7 +5,7 @@
   z-index: 1000;
 
   .chatbot-open-button {
-    background-color: darkgreen; // orange-500
+    background-color: blue; // orange-500
     border: none;
     padding: 1rem;
     border-radius: 50%;
@@ -39,7 +39,7 @@
     overflow: hidden;
 
     .chatbot-header {
-      background-color: darkgreen; // orange-500
+      background-color: blue; // orange-500
       color: white;
       padding: 1rem;
       display: flex;
@@ -129,7 +129,7 @@
           justify-content: flex-end;
 
           .chatbot-message {
-            background-color: darkgreen; // orange-500
+            background-color: blue; // orange-500
             color: #fff;
             border-radius: 0.5rem;
             max-width: 70%;
@@ -173,13 +173,13 @@
 
         &:focus {
           outline: none;
-          border-color: darkgreen; // orange-500
+          border-color: rgb(67, 158, 250); // orange-500
           box-shadow: 0 0 0 2px rgba(249, 115, 22, 0.5);
         }
       }
 
       .chatbot-send-button {
-        background-color: darkgreen; // orange-500
+        background-color: blue; // orange-500
         border: none;
         border-radius: 0.5rem;
         padding: 0.5rem 0.75rem;
